[package]
name = "chiral-db"
version = "0.1.0"
edition = "2018"

[dependencies]
cxx = "1.0"
openbabel = "0.3.1"
# openbabel = { package = "openbabel", git = "https://github.com/rogerwq/openbabel-rust.git" }
chiral_db_sources = { package = "chiral-db-sources", git = "https://github.com/chiral-data/chiral-db-sources.git" }